# streaming_video

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md
back/: .env  Dockerfile  Makefile  README.md  alembic.ini  env.py  main.py  pyproject.toml  requirements.txt  run_migrations.py  test.db
back/api/: api.py  dependencies.py
back/api/endpoints/: categories.py  playlists.py  subtitles.py  videos.py
back/core/: config.py
back/db/: database.py
back/db/repositories/: __init__.py  base.py  category_repository.py  playlist_repository.py  subtitle_repository.py  video_repository.py
back/migrations/: env.py
back/models/: __init__.py  associations.py  category.py  playlist.py  subtitle.py  video.py
back/schemas/: __init__.py  category.py  playlist.py  subtitle.py  video.py
back/seeds/: seed_all.py  seed_blade.py  seed_collection.py  seed_percy_jackson.py  seed_playlists.py  seed_underworld.py  seed_videos.py
back/services/: __init__.py  playlist_service.py  subtitle_service.py  video_service.py
back/tests/: test_categories.py  test_playlists.py  test_repositories.py  test_services.py  test_subtitles.py  test_videos.py
back/uploads/subtitles/: test.srt
back/utils/: file_handlers.py
front/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
front/coverage/: index.html  lcov.info
front/coverage/lcov-report/: index.html
front/coverage/src/: App.jsx.html  index.html  main.jsx.html
front/src/: App.jsx  config.js  main.jsx
front/src/__tests__/: App.test.jsx  main.test.jsx
infra/: README.md  docker-compose.yml
(+78 files in other folders)
